--- a/addIncome.html
+++ b/addIncome.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Aplikacja Budżet osobisty pomoże Ci w zarządzaniu swoimi wydatkami">
 	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 	
@@ -77,11 +77,11 @@
 								<div class="div-form-buttons mx-auto">
 									<div class="mb-3">
 										<label for="amount" class="form-label">Kwota (zł):</label>
-										<input type="number" class="form-control" min="0" step="0.01" id="amount" value="1">
+										<input type="number" class="form-control" min="0" step="0.01" id="amount" value="1" onkeypress="return onlyNumberKey(event)">
 									</div>
 									<div class="mb-3">
 										<label for="theDate" class="form-label">Data:</label>
-										<input type="date" class="form-control" id="theDate">
+										<input type="date" class="form-control" id="theDate" min="2000-01-01">
 									</div>
 									<label class="p-input-radio mb-2" for="paymentCategoryIncome">Kategoria płatności:</label>
 									<select class="form-select form-select-sm" aria-label="kategoria platnosci" name="paymentCategoryIncome" id="paymentCategoryIncome">
@@ -119,7 +119,7 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="src/script.js"></script>
+	<script src="js/script.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
