--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Aplikacja Budżet osobisty pomoże Ci w zarządzaniu swoimi wydatkami">
 	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +39,6 @@
 								</div>
 								
 								<div class="submit"><button type="submit" class="btn btn-warning">Zaloguj się</button></div> 
-						<!--		<div class="submit"><input class="btn btn-outline-danger" type="submit" value="Zaloguj się"></div>  !-->
 							</form>
 						</div>
 						<div class="col-sm-12 col-lg-4 col-xxl-3 mt-3">
@@ -55,7 +54,7 @@
 			<footer>
 				<div class="row justify-content-center">
 					
-					<div class="col-sm-12 col-lg-6 p-4 mt-3"> <!--p-3!-->
+					<div class="col-sm-12 col-lg-6 p-4 mt-3">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
 				</div>
