--- a/registration.html
+++ b/registration.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Aplikacja Budżet osobisty pomoże Ci w zarządzaniu swoimi wydatkami">
 	<meta name="keywords" content="budżet osobisty, wydatki, przychody, zarządzaj swoimi wydatkami">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">	
 </head>
@@ -37,8 +37,6 @@
 							<div class="input-group mb-3 w-75 set-margin">
 								  <input type="password" class="form-control" placeholder="Podaj hasło" aria-label="password" required />
 							</div>
-							
-					<!--		<div class="submit"><button type="button" onclick="document.location='personalBudget.html'" class="btn btn-warning ">Zaloguj się</button></div>!-->
 							<div class="submit"><input class="btn btn-warning" type="submit" value="Zaloguj się"></div>
 						</form>
 					</div>
@@ -55,7 +53,6 @@
 								  <input type="password" class="form-control" placeholder="Powtórz nowe hasło" aria-label="newPassword2" required />
 							</div>
 							<div class="submit"><button type="submit" class="btn btn-success ">Zarejestruj się</button></div>	
-					<!--		<div class="submit"><input class="btn btn-success" type="submit" value="Zarejestruj się"></div>	!-->
 						</form>
 					</div>
 				</div> 
@@ -65,7 +62,7 @@
 		<footer>
 			<div class="row justify-content-center">
 				
-				<div class="col-sm-12 col-lg-6 p-4 mt-3"> <!--p-3!-->
+				<div class="col-sm-12 col-lg-6 p-4 mt-3"> 
 					<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 				</div>
 			</div>
