--- a/addExpense.html
+++ b/addExpense.html
@@ -73,8 +73,8 @@
 					<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
 						<div class="content mt-2 p-4">	
 							<h3>DODAJ WYDATEK</h3>
-							<form action="#" method="post">
-								<div class="div-form-buttons mx-auto">
+							<div class="div-form-buttons mx-auto">
+								<form action="#" method="post">
 									<div class="mb-3">
 										<label for="amountOfExpanse" class="form-label">Kwota (zł):</label>
 										<input type="number" class="form-control" min="0" step="0.01" id="amountOfExpanse" value="1" onkeypress="return onlyNumberKey(event)">
@@ -116,10 +116,12 @@
 									<div class="mt-4 submit">
 										<button type="submit" class="btn btn-warning btn-lg">Dodaj</button>
 									</div>
+								</form>	
+								<form>
+									<div class="mt-4 submit">
+										<button type="button" onclick="document.location='personalBudget.html'" class="btn btn-warning btn-lg">Anuluj</button>
+									</div>
 								</form>
-								<div class="mt-4 submit">
-									<button type="button" onclick="document.location='personalBudget.html'" class="btn btn-warning btn-lg">Anuluj</button>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -128,7 +130,7 @@
 		</main>
 		<footer>
 			<div class="row justify-content-center">	
-				<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+				<div class="col-sm-12 col-xl-10 col-xxl-8">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
