--- a/addIncome.html
+++ b/addIncome.html
@@ -73,8 +73,8 @@
 					<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
 						<div class="content mt-2 p-4">	
 							<h3>DODAJ PRZYCHÓD</h3>
-							<form>
-								<div class="div-form-buttons mx-auto">
+							<div class="div-form-buttons mx-auto">
+								<form action="#" method="post">
 									<div class="mb-3">
 										<label for="amount" class="form-label">Kwota (zł):</label>
 										<input type="number" class="form-control" min="0" step="0.01" id="amount" value="1" onkeypress="return onlyNumberKey(event)">
@@ -95,13 +95,15 @@
 										<textarea class="form-control" id="comment" rows="2"></textarea>
 									</div>
 									<div class="mt-4 submit">
-										<button type="button" onclick="document.location='addIncome.html'" class="btn btn-warning btn-lg">Dodaj</button>
+										<button type="submit" class="btn btn-warning btn-lg">Dodaj</button>
 									</div>
+								</form>
+								<form>
 									<div class="mt-4 submit">
-										<button type="button" class="btn btn-warning btn-lg">Anuluj</button>
+										<button type="button" onclick="document.location='personalBudget.html'" class="btn btn-warning btn-lg">Anuluj</button>
 									</div>
-								</div>
-							</form>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -109,7 +111,7 @@
 		</main>
 		<footer>
 			<div class="row justify-content-center">	
-				<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+				<div class="col-sm-12 col-xl-10 col-xxl-8">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
