--- a/browseTheBalance.html
+++ b/browseTheBalance.html
@@ -98,7 +98,7 @@
 		</main>
 		<footer>
 			<div class="row justify-content-center">	
-				<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+				<div class="col-sm-12 col-xl-10 col-xxl-8">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
