--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 							<form action="personalBudget.html" method="post">
 								<p class="p-2"> Masz już konto? </p>
 								<div class="input-group mb-3 w-75 set-margin">
-									<input type="text" class="form-control" placeholder="Podaj login" aria-label="username" required />
+									<input type="text" class="form-control" placeholder="Podaj login" aria-label="username" required>
 								</div>	
 								<div class="input-group mb-3 w-75 set-margin">
-									<input type="password" class="form-control" placeholder="Podaj hasło" aria-label="password" required />
+									<input type="password" class="form-control" placeholder="Podaj hasło" aria-label="password" required>
 								</div>
 								
 								<div class="submit"><button type="submit" class="btn btn-warning">Zaloguj się</button></div> 
