--- a/personalBudget.html
+++ b/personalBudget.html
@@ -73,10 +73,10 @@
 					<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
 						<div class="content mt-2 p-4">
 							<h2>Aplikacja Budżet Osobisty</h2>
-							<p class="p-content p-2">Budżet Osobisty pozwala na analizę tego jakie mamy przychody npieszkaniem, kredytami, jedzeniem, rozrywką, remontami, wakacjami, ubezpieczeniami. Dzięki tej analizie łatwiej jest nam zaoszczędzić pieniądze na nowy cel. np samochód. </p>
+							<p class="p-content p-2">Budżet Osobisty pozwala na analizę tego jakie mamy przychody np. związane z wynagrodzeniem, stypendium itd. oraz ile pieniędzy wydajemy na poszczególne rzeczy: opłaty związane z mieszkaniem, kredytami, jedzeniem, rozrywką, remontami, wakacjami, ubezpieczeniami. Dzięki tej analizie łatwiej jest nam zaoszczędzić pieniądze na nowy cel. np samochód. </p>
 							
-							<h2>Jak działa Aplikacja Budżet Osobisty?</h2>
-							<p class="p-content p-2">Mamy do wyboru 4 główne opcje w aplikacji: dodaj przychód (możemy dodać np.: wynagrodzenie, odsetki bankowe, sprzedaż na allegro), dodaj wydatek (mozemy dodać: sposób płatności: gotówką, kartą debetową, kartą kredytową w następującychj kategoriach: jedzenie, mieszkanie, transport, telekomunikacja, opieka zdrowotna itp.), przeglądaj bilans (tutaj zaprezentowane jest podsumowanie przychodów oraz wydatków w danym okresie dla danych kategorii)oraz ustawienia gdzie możemy zmienić: adres e-mail lub hasło.</p>	
+							<h2 class="mt-2">Jak działa Aplikacja Budżet Osobisty?</h2>
+							<p class="p-content p-2">Mamy do wyboru 4 główne opcje w aplikacji: dodaj przychód (możemy dodać np.: wynagrodzenie, odsetki bankowe, sprzedaż na allegro, inne), dodaj wydatek (możemy dodać: sposób płatności: gotówką, kartą debetową, kartą kredytową w następujących kategoriach: jedzenie, mieszkanie, transport, telekomunikacja, opieka zdrowotna itp.), przeglądaj bilans (tutaj zaprezentowane jest podsumowanie przychodów oraz wydatków w danym okresie dla danych kategorii) oraz ustawienia gdzie możemy zmienić: adres e-mail lub hasło.</p>	
 						</div>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 		</main>
 		<footer>
 			<div class="row justify-content-center">	
-				<div class="col-sm-12 col-xl-10 col-xxl-8 p-0">
+				<div class="col-sm-12 col-xl-10 col-xxl-8">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
 					</div>
