--- a/registration.html
+++ b/registration.html
@@ -32,10 +32,10 @@
 						<form action="personalBudget.html" method="post">
 							<p class="p-2"> Masz już konto? </p>
 							<div class="input-group mb-3 w-75 set-margin">
-								  <input type="text" class="form-control" placeholder="Podaj login" aria-label="username" required />
+								  <input type="text" class="form-control" placeholder="Podaj login" aria-label="username" required>
 							</div>	
 							<div class="input-group mb-3 w-75 set-margin">
-								  <input type="password" class="form-control" placeholder="Podaj hasło" aria-label="password" required />
+								  <input type="password" class="form-control" placeholder="Podaj hasło" aria-label="password" required>
 							</div>
 							<div class="submit"><input class="btn btn-warning" type="submit" value="Zaloguj się"></div>
 						</form>
@@ -44,13 +44,13 @@
 						<form action="personalBudget.html" method="post">
 							<p class="p-2"> Nie masz jeszcze konta? </p>
 							<div class="input-group mb-3 w-75 set-margin">
-								  <input type="text" class="form-control" placeholder="Podaj nowy login" aria-label="newUsername" required />
+								  <input type="text" class="form-control" placeholder="Podaj nowy login" aria-label="newUsername" required>
 							</div>	
 							<div class="input-group mb-3 w-75 set-margin">
-								  <input type="password" class="form-control" placeholder="Podaj nowe hasło" aria-label="newPassword" required />
+								  <input type="password" class="form-control" placeholder="Podaj nowe hasło" aria-label="newPassword" required>
 							</div>
 							<div class="input-group mb-3 w-75 set-margin">
-								  <input type="password" class="form-control" placeholder="Powtórz nowe hasło" aria-label="newPassword2" required />
+								  <input type="password" class="form-control" placeholder="Powtórz nowe hasło" aria-label="newPassword2" required>
 							</div>
 							<div class="submit"><button type="submit" class="btn btn-success ">Zarejestruj się</button></div>	
 						</form>
