--- a/addIncome.html
+++ b/addIncome.html
@@ -21,7 +21,7 @@
 	
 	<div class="container-fluid">
 		<header>
-			<div class="row justify-content-center">
+			<div class="row justify-content-center m-0 p-0">
 				<div class="col-xl-12 col-xxl-9">
 					<div class="p-4 mt-5">
 						<h1><i class="icon-dollar-1"></i>BUDŻET OSOBISTY</h1>
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row justify-content-center">
+			<div class="row justify-content-center m-0 p-0">
 				<nav class="navbar navbar-expand-xl col-xl-12 col-xxl-9 navbar-light top-bar p-0">
 					<div class="container-fluid padding-991"> 
 						<a class="navbar-brand text-light mx-0" href="#"></a>
@@ -70,7 +70,7 @@
 		</header>
 		<main>
 			<article>
-				<div class="row justify-content-center">
+				<div class="row justify-content-center m-0 p-0">
 					<div class="col-xl-12 col-xxl-9 p-0">
 						<div class="content mt-2 p-4">	
 							<h3>DODAJ PRZYCHÓD</h3>
@@ -111,7 +111,7 @@
 			</article>
 		</main>
 		<footer>
-			<div class="row justify-content-center">	
+			<div class="row justify-content-center m-0 p-0">	
 				<div class="col-xl-12 col-xxl-9">
 					<div class="p-2">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
