--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="container-fluid">
 			<header>
-				<div class="row justify-content-center">
+				<div class="row justify-content-center m-0 p-0">
 					<div class="col-xl-12 col-xxl-9 p-4 mt-5">
 						<h1><i class="icon-dollar-1"></i>BUDŻET OSOBISTY</h1>
 						<p class="bo">Aplikacja do zarządzania budżetem osobistym</p>
@@ -28,7 +28,7 @@
 			</header>
 			<main>
 				<article>
-					<div class="row justify-content-center">
+					<div class="row justify-content-center m-0 p-0">
 						<div class="col-sm-12 col-lg-4 col-xxl-3 log-in-or-register mt-3">
 							<form action="personalBudget.html" method="post">
 								<p class="p-2"> Masz już konto? </p>
@@ -53,7 +53,7 @@
 			</main>
 			
 			<footer>
-				<div class="row justify-content-center">
+				<div class="row justify-content-center m-0 p-0">
 					
 					<div class="col-sm-12 col-lg-6 p-4 mt-3">
 						<p>Wszelkie prawa zastrzeżone &copy; 2022 Dziękuję za wizytę!</p>
